--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -9,6 +9,7 @@
 </head>
 <form action="/logout" method="post">
     <div>
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         <input type="submit" value="Log out" />
     </div>
 </form>
