add image controller and change app loading phases

--- a/resources/views/404.ejs
+++ b/resources/views/404.ejs
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= appName %></title>
-</head>
+<%- include('layouts/header'); %>
 <h1>Page not Found</h1>
-
-<body>
-
-</body>
-
-</html>
+<%- include('layouts/footer'); %>
