--- a/resources/views/index.ejs
+++ b/resources/views/index.ejs
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= appName %></title>
-    <link rel="stylesheet" href="/css/index.css">
-</head>
+<%- include('layouts/header'); %>
 <h1>Hello there</h1>
-
-<body>
-
-</body>
-
-</html>
+<%- include('layouts/footer'); %>
