--- a/resources/views/register.ejs
+++ b/resources/views/register.ejs
@@ -1,38 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= appName %></title>
-    <link rel="stylesheet" href="/css/index.css">
-</head>
-<h1>Login Page</h1>
-<form action="/register" method="post">
+<%- include('layouts/header', {message: message || {} }); %>
+<form action="/signup" method="post" class="mx-auto md:max-w-screen-md">
+    <h1 class="text-3xl text-gray-800 my-4">Join us now !</h1>
     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
     <div>
-        <label>FirstName:</label>
-        <input type="text" name="firstname" />
+        <label class="form-label">FirstName:</label>
+        <input class="form-control" type="text" name="firstname" />
     </div>
     <div>
-        <label>LastName:</label>
-        <input type="text" name="lastname" />
+        <label class="form-label">LastName:</label>
+        <input class="form-control" type="text" name="lastname" />
     </div>
     <div>
-        <label>Email:</label>
-        <input type="text" name="email" />
+        <label class="form-label">Email:</label>
+        <input class="form-control" type="text" name="email" />
     </div>
     <div>
-        <label>Password:</label>
-        <input type="password" name="password" />
+        <label class="form-label">Password:</label>
+        <input class="form-control" type="password" name="password" />
     </div>
     <div>
-        <input type="submit" value="register" />
+        <input class="btn bg-blue-700 text-white" type="submit" value="register" />
     </div>
 </form>
-
-<body>
-
-</body>
-
-</html>
+<%- include('layouts/footer'); %>
