clear session conflicts messages and add edit image view

--- a/resources/views/image/edit.ejs
+++ b/resources/views/image/edit.ejs
@@ -1,14 +1,14 @@
 <%- include('../layouts/header',{message}); %>
 <form action="/images" method="post" enctype="multipart/form-data" class="mx-auto md:max-w-screen-md">
-    <h1 class="text-2xl text-gray-800 my-4">share Image with the world !</h1>
+    <h1 class="text-2xl text-gray-800 my-4">update image</h1>
     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
     <div>
         <label class="form-label">Title:</label>
-        <input class="form-control" type="text" name="title" />
+        <input class="form-control" type="text" name="title" value="<%= image.title %>" />
     </div>
     <div>
         <label class="form-label">Description:</label>
-        <input class="form-control" type="text" name="description" />
+        <input class="form-control" type="text" name="description" value="<%= image.desription %>" />
     </div>
     <div>
         <label class="form-label">please upload image </label>
