--- a/resources/views/image/edit.ejs
+++ b/resources/views/image/edit.ejs
@@ -1,5 +1,6 @@
 <%- include('../layouts/header',{message}); %>
-<form action="/images" method="post" enctype="multipart/form-data" class="mx-auto md:max-w-screen-md">
+<form method="POST" action="/images/<%= image.id %>/?_method=PUT" enctype="multipart/form-data"
+    class="mx-auto md:max-w-screen-md">
     <h1 class="text-2xl text-gray-800 my-4">update image</h1>
     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
     <div>
@@ -8,10 +9,11 @@
     </div>
     <div>
         <label class="form-label">Description:</label>
-        <input class="form-control" type="text" name="description" value="<%= image.desription %>" />
+        <input class="form-control" type="text" name="description" value="<%= image.description %>" />
     </div>
     <div>
-        <label class="form-label">please upload image </label>
+        <img class="my-4 w-32 h-auto" src="/storage/uploads/<%= image.url %>" alt="<%= image.description %>" />
+        <label class="form-label">please upload new image </label>
         <input class="form-control" type="file" name="image" />
     </div>
     <div>
