--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -679,6 +679,55 @@ video {
   cursor: pointer;
 }
 
+.nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.nav-links {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+}
+
+@media (min-width: 768px) {
+  .nav {
+    justify-content: space-between;
+  }
+
+  .nav-links {
+    flex-direction: row;
+    justify-content: space-between;
+    width: auto;
+    height: auto !important;
+    overflow: auto !important;
+    max-height: 50px !important;
+  }
+}
+
+.nav-item {
+  --text-opacity: 1;
+  color: #2d3748;
+  color: rgba(45, 55, 72, var(--text-opacity));
+  font-size: 1.125rem;
+  padding: 0.75rem;
+}
+
+.nav-item:hover {
+  --text-opacity: 1;
+  color: #3182ce;
+  color: rgba(49, 130, 206, var(--text-opacity));
+}
+
+.nav-item:hover {
+  --text-opacity: 1;
+  color: #3182ce;
+  color: rgba(49, 130, 206, var(--text-opacity));
+}
+
 .space-y-0 > :not(template) ~ :not(template) {
   --space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
