--- a/resources/views/index.ejs
+++ b/resources/views/index.ejs
@@ -1,3 +1,4 @@
 <%- include('layouts/header'); %>
-<h1>Hello there</h1>
+<div id="app"></div>
+<script src="/js/index.bundle.js"></script>
 <%- include('layouts/footer'); %>
