--- a/resources/views/layouts/header.ejs
+++ b/resources/views/layouts/header.ejs
@@ -9,35 +9,55 @@
 </head>
 
 <body class="p-4">
-    <nav class="flex items-center justify-between flex-wrap bg-blue-600 mb-5 p-6">
-        <div class="flex items-center flex-shrink-0 text-white mr-6">
-            <span class="font-semibold text-xl tracking-tight"><%= env('APP_NAME') %></span>
+    <nav class="nav">
+    <div class="flex" style="max-width:80%">
+        <img src="/logo.svg" class="w-20 h-20 rounded-full" />
+        <div class="flex flex-col ml-3">
+            <h3 class="font-semibold text-xl text-gray-800">
+                <a href="/"><%= env('APP_NAME') %></a>
+            </h3>
+            <p class="text-lg text-gray-700">
+                cheering the world
+            </p>
         </div>
-        <div class="block lg:hidden">
-            <button
-                class="flex items-center px-3 py-2 border rounded text-blue-200 border-blue-400 hover:text-white hover:border-white">
+    </div>
+
+    <div class="nav-toggler inline-block md:hidden">
+        <button 
+                class="flex items-center px-3 py-2 border rounded text-blue-800 border-blue-600 hover:text-blue-600 hover:border-blue-800">
                 <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <title>Menu</title>
                     <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
                 </svg>
             </button>
-        </div>
-        <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-            <div class="text-sm lg:flex-grow">
-                <a href="/home" class="block mt-4 lg:inline-block lg:mt-0 text-blue-200 hover:text-white mr-4">
-                    Home
-                </a>
-            </div>
-            <div>
-                <a href="/signin"
-                    class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-blue-600 hover:bg-white mt-4 lg:mt-0">Sign
-                    in</a>
-                <a href="/signup"
-                    class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-blue-600 hover:bg-white mt-4 lg:mt-0">Sign
-                    up</a>
-            </div>
-        </div>
-    </nav>
+    </div>
+    <div class="nav-links" data-collapsed="true">
+        <a class='nav-item' href="/home">Home</a>
+        <a class='nav-item border bg-blue-700 text-white hover:text-white' href="/images/create">Upload Image</a>
+        <a class='nav-item md:border md:border-blue-700 md:rounded-md md:ml-1' href="/signin">Signin</a>
+        <a class='nav-item md:border md:border-blue-700 md:rounded-md md:ml-1' href="/contact">Signup</a>
+    </div>
+</nav>
+<script type="text/javascript">
+document.addEventListener('DOMContentLoaded', function (e) {
+    e.preventDefault();
+    var toggler = document.querySelector('.nav-toggler');
+    toggler.addEventListener('click', function (e) {
+        var links = document.querySelector('.nav-links');
+        var collapsed = links.getAttribute('data-collapsed');
+        if (collapsed === "true") {
+            links.style.height = "auto";
+            links.style.overflow = 'auto';
+            links.setAttribute('data-collapsed','false');
+        } else {
+            links.style.height = 0;
+            links.style.overflow = 'hidden';
+            links.setAttribute('data-collapsed','true');
+        }
+    })
+});
+</script>
+
      <% if (typeof(message)  == "object" && (message.errors.length || message.success.length ))  { %>
     <div class="p-4 rounded-md text-center w-auto mx-auto text-lg bg-red-200 md:w-1/2">
         <% if (message.errors) { %>
