--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,10 +1,4 @@
 <%- include('layouts/header'); %>
-<form action="/logout" method="post">
-    <div>
-        <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-        <input type="submit" value="Log out" />
-    </div>
-</form>
 <div id="app"></div>
-<script src="/js/index.bundle.js"></script>
+<script src="/js/home.bundle.js"></script>
 <%- include('layouts/footer'); %>
