--- a/resources/views/image/create.ejs
+++ b/resources/views/image/create.ejs
@@ -1,4 +1,4 @@
-<%- include('../layouts/header',{message}); %>
+<%- include('../layouts/header'); %>
 <form action="/images" method="post" enctype="multipart/form-data" class="mx-auto md:max-w-screen-md">
     <h1 class="text-2xl text-gray-800 my-4">share Image with the world !</h1>
     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
