--- a/resources/views/image/edit.ejs
+++ b/resources/views/image/edit.ejs
@@ -1,4 +1,4 @@
-<%- include('../layouts/header',{message}); %>
+<%- include('../layouts/header'); %>
 <form method="POST" action="/images/<%= image.id %>/?_method=PUT" enctype="multipart/form-data"
     class="mx-auto md:max-w-screen-md">
     <h1 class="text-2xl text-gray-800 my-4">update image</h1>
