--- a/resources/views/login.ejs
+++ b/resources/views/login.ejs
@@ -1,4 +1,4 @@
-<%- include('layouts/header', {message}); %>
+<%- include('layouts/header',{message,isAuthenticated}); %>
 <form action="/signin" method="post" class="mx-auto md:max-w-screen-md">
     <h1 class="text-3xl text-gray-800 my-4">Welcome back !</h1>
     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
