Change db to postgres and a storage to folder

--- a/resources/views/image/edit.ejs
+++ b/resources/views/image/edit.ejs
@@ -17,7 +17,7 @@
         <input class="form-control" type="file" name="image" />
     </div>
     <div>
-        <input class="btn bg-blue-700 text-white" type="submit" value="add Image" />
+        <input class="btn bg-blue-700 text-white" type="submit" value="Save" />
     </div>
 </form>
 <%- include('../layouts/footer'); %>
